fixed hero on mobile

--- a/styles.css
+++ b/styles.css
@@ -62,20 +62,21 @@ main section .full-width {
   background-image: linear-gradient(rgba(0, 0, 0, 0.219), rgba(0, 0, 0, 0.5)),
     url("beautysalon.webp");
   height: 100%;
+  min-height: 200px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  position: relative;
   border-radius: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 1rem;
 }
 
 .hero-text {
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   color: white;
+  max-width: 90%;
 }
 
 .hero-text button {
